[gd_scene load_steps=35 format=2]

[ext_resource path="res://lib/ext/particle_rain/particle_rain.gd" type="Script" id=1]
[ext_resource path="res://lib/ext/particle_rain/res/fog.png" type="Texture" id=2]
[ext_resource path="res://lib/ext/particle_rain/res/snow_4.png" type="Texture" id=3]
[ext_resource path="res://lib/ext/particle_rain/res/snow_1.png" type="Texture" id=4]
[ext_resource path="res://lib/ext/particle_rain/res/snow_3.png" type="Texture" id=5]
[ext_resource path="res://lib/ext/particle_rain/res/snow_2.png" type="Texture" id=6]

[sub_resource type="ParticlesMaterial" id=1]
emission_shape = 2
emission_box_extents = Vector3( 50, 1, 50 )
direction = Vector3( 0, -1, 0 )
spread = 0.0
initial_velocity = 100.0
initial_velocity_random = 0.5

[sub_resource type="SpatialMaterial" id=2]
flags_unshaded = true
flags_disable_ambient_light = true
params_specular_mode = 4
params_cull_mode = 2

[sub_resource type="QuadMesh" id=3]
material = SubResource( 2 )
size = Vector2( 0.02, 8 )

[sub_resource type="ParticlesMaterial" id=4]
emission_shape = 2
emission_box_extents = Vector3( 50, 1, 50 )
direction = Vector3( 0, -1, 0 )
spread = 8.0
initial_velocity = 8.0
initial_velocity_random = 0.5
angular_velocity = 30.0
angle = -347.6
angle_random = 0.34
scale = 2.0
scale_random = 0.75

[sub_resource type="SpatialMaterial" id=5]
flags_unshaded = true
vertex_color_use_as_albedo = true

[sub_resource type="SphereMesh" id=6]
material = SubResource( 5 )

[sub_resource type="Gradient" id=7]
colors = PoolColorArray( 1, 1, 1, 0, 1, 1, 1, 0.498039 )

[sub_resource type="GradientTexture" id=8]
gradient = SubResource( 7 )

[sub_resource type="ParticlesMaterial" id=9]
direction = Vector3( 0, -1, 0 )
spread = 0.0
color_ramp = SubResource( 8 )

[sub_resource type="SpatialMaterial" id=10]
flags_transparent = true
flags_unshaded = true
flags_do_not_receive_shadows = true
flags_disable_ambient_light = true
vertex_color_use_as_albedo = true
params_specular_mode = 4
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
albedo_texture = ExtResource( 4 )

[sub_resource type="QuadMesh" id=11]
material = SubResource( 10 )
size = Vector2( 256, 256 )

[sub_resource type="Gradient" id=12]
offsets = PoolRealArray( 0, 0.218519, 1 )
colors = PoolColorArray( 0.941176, 0.952941, 1, 0, 0.960784, 0.968627, 1, 1, 1, 1, 1, 1 )

[sub_resource type="GradientTexture" id=13]
gradient = SubResource( 12 )

[sub_resource type="ParticlesMaterial" id=14]
emission_shape = 2
emission_box_extents = Vector3( 50, 1, 50 )
direction = Vector3( 0, -1, 0 )
spread = 5.0
initial_velocity = 30.0
angle = 180.0
scale = 3.0
scale_random = 1.0
color_ramp = SubResource( 13 )

[sub_resource type="SpatialMaterial" id=15]
flags_transparent = true
flags_unshaded = true
flags_do_not_receive_shadows = true
flags_disable_ambient_light = true
vertex_color_use_as_albedo = true
params_specular_mode = 4
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
albedo_texture = ExtResource( 6 )

[sub_resource type="QuadMesh" id=16]
material = SubResource( 15 )

[sub_resource type="ParticlesMaterial" id=17]
emission_shape = 2
emission_box_extents = Vector3( 50, 1, 50 )
direction = Vector3( 0, -1, 0 )
initial_velocity = 20.0
radial_accel = 30.0
radial_accel_random = 0.75
tangential_accel = 26.77
angle = 45.0
scale = 2.0
scale_random = 1.0

[sub_resource type="SpatialMaterial" id=18]
flags_transparent = true
flags_unshaded = true
flags_do_not_receive_shadows = true
flags_disable_ambient_light = true
params_specular_mode = 4
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
albedo_texture = ExtResource( 5 )

[sub_resource type="QuadMesh" id=19]
material = SubResource( 18 )

[sub_resource type="SpatialMaterial" id=20]
flags_transparent = true
flags_unshaded = true
flags_disable_ambient_light = true
params_specular_mode = 4
params_cull_mode = 2
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
albedo_texture = ExtResource( 3 )

[sub_resource type="ParticlesMaterial" id=21]
emission_shape = 2
emission_box_extents = Vector3( 50, 1, 50 )
direction = Vector3( 0, -1, 0 )
initial_velocity = 10.0
initial_velocity_random = 0.5
angular_velocity = 15.0
radial_accel = -0.1
tangential_accel = 5.0
angle = 90.0
angle_random = 0.5
scale = 2.0
scale_random = 1.0

[sub_resource type="SpatialMaterial" id=22]
flags_transparent = true
flags_unshaded = true
flags_do_not_receive_shadows = true
flags_disable_ambient_light = true
params_specular_mode = 4
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
albedo_texture = ExtResource( 3 )

[sub_resource type="QuadMesh" id=23]
material = SubResource( 22 )

[sub_resource type="Gradient" id=24]
offsets = PoolRealArray( 0, 0.257971, 0.788406, 1 )
colors = PoolColorArray( 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=25]
gradient = SubResource( 24 )
width = 16

[sub_resource type="ParticlesMaterial" id=26]
emission_shape = 2
emission_box_extents = Vector3( 50, 1, 50 )
direction = Vector3( 0, 1, 0 )
flatness = 0.22
gravity = Vector3( 0, 0, 0 )
initial_velocity = 1.0
angular_velocity = 1.0
angular_velocity_random = 0.18
angle = 16.0
angle_random = 0.2
scale = 16.0
color_ramp = SubResource( 25 )

[sub_resource type="SpatialMaterial" id=27]
flags_transparent = true
flags_unshaded = true
flags_disable_ambient_light = true
vertex_color_use_as_albedo = true
params_specular_mode = 4
params_cull_mode = 2
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
albedo_color = Color( 1, 1, 1, 0.0509804 )
albedo_texture = ExtResource( 2 )

[sub_resource type="QuadMesh" id=28]
material = SubResource( 27 )

[node name="particle_root" type="Spatial"]
script = ExtResource( 1 )

[node name="particles_rain" type="Particles" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 50, 0 )
visible = false
cast_shadow = 0
amount = 2048
lifetime = 2.0
preprocess = 60.0
visibility_aabb = AABB( -50, -75, -50, 100, 100, 100 )
process_material = SubResource( 1 )
draw_pass_1 = SubResource( 3 )

[node name="particles_snow_1" type="Particles" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 50, 0 )
visible = false
amount = 2048
lifetime = 8.0
preprocess = 60.0
visibility_aabb = AABB( -50, -75, -50, 100, 100, 100 )
process_material = SubResource( 4 )
draw_pass_1 = SubResource( 6 )

[node name="particles_snow_2" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 50, 0 )

[node name="snow_1" type="Particles" parent="particles_snow_2"]
visible = false
amount = 2
lifetime = 8.0
preprocess = 60.0
visibility_aabb = AABB( -50, -50, -50, 100, 100, 100 )
process_material = SubResource( 9 )
draw_pass_1 = SubResource( 11 )

[node name="snow_2" type="Particles" parent="particles_snow_2"]
amount = 16
lifetime = 8.0
preprocess = 60.0
visibility_aabb = AABB( -50, -50, -50, 100, 100, 100 )
process_material = SubResource( 14 )
draw_pass_1 = SubResource( 16 )

[node name="snow_3" type="Particles" parent="particles_snow_2"]
amount = 256
lifetime = 8.0
preprocess = 60.0
visibility_aabb = AABB( -50, -50, -50, 100, 100, 100 )
process_material = SubResource( 17 )
draw_pass_1 = SubResource( 19 )

[node name="snow_4" type="Particles" parent="particles_snow_2"]
material_override = SubResource( 20 )
amount = 128
lifetime = 8.0
preprocess = 60.0
visibility_aabb = AABB( -50, -50, -50, 100, 100, 100 )
process_material = SubResource( 21 )
draw_pass_1 = SubResource( 23 )

[node name="particles_fog" type="Particles" parent="."]
visible = false
amount = 256
lifetime = 3.0
preprocess = 60.0
process_material = SubResource( 26 )
draw_pass_1 = SubResource( 28 )
